[package]
name = "ssh-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
byteorder = "1.5.0"
bytes = "1.6.0"
eyre = "0.6.12"
futures = "0.3.30"
openssl = "0.10.64"
rand = "0.8.5"
rsa = { version = "0.9.6", features = ["sha2"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
sha1 = "0.10.6"
ssh-encoding = "0.2.0"
ssh-key = { version = "0.6.6", features = ["ed25519", "rsa"] }
thiserror = "1.0.60"
tokio = { version = "1.37.0", features = ["fs", "io-util", "macros", "net", "rt-multi-thread"] }
tokio-util = { version = "0.7.11", features = ["codec"] }
